<resources>

    <!-- Strings related to details of the App -->
    <string name="app_logo_desc">The logo for the app Timebox</string>
    <string name="app_name">Timebox</string>
    <string name="team_name">CurryWurst</string>
    <string name="lecture_name">ISEE</string>

    <!-- Strings related to Settings Preferences -->
    <!-- Strings related to Categories -->
    <string name="pref_header_categories">Categories</string>
    <string name="targetClass">com.my.activities.AddModActivities</string>
    <string name="targetPackage">com.aktilog.timebox</string>

    <!-- Strings related to Pin -->
    <string name="pref_header_pin_settings">PIN</string>
    <string-array name="pref_security_question1">
        <item>What is the maiden name of your mother?</item>
    </string-array>
    <string name="pref_sec_ques1">What is the maiden name of your mother?</string>
    <string-array name="pref_security_question2">
        <item>What was the name of your first pet?</item>
    </string-array>
    <string name="pref_sec_ques2">What was the name of your first pet?</string>
    <string-array name="pref_security_question3">
        <item>Which phone number do you remember most from your childhood?</item>
    </string-array>
    <string name="pref_sec_ques3">Which phone number do you remember most from your childhood?</string>
    <string-array name="pref_security_question4">
        <item>In which city were you born?</item>
    </string-array>
    <string name="pref_sec_ques4">In which city were you born?</string>
    <string-array name="pref_security_question5">
        <item>Which is your favorite movie?</item>
    </string-array>
    <string name="pref_sec_ques5">Which is your favorite movie?</string>
    <string-array name="pref_security_question6">
        <item>What was the make of your first car?</item>
    </string-array>
    <string name="pref_sec_ques6">What was the make of your first car?</string>
    <string name="pref_title_enable_pin">Enable PIN</string>
    <string name="pref_title_specify_pin">Specify PIN</string>
    <string name="title_pref_security">Security Questions</string>
    <string name="summary_pref_security">Please set up PIN recovery options here</string>
    <string name="title_sec_ques1">Security Question 1</string>
    <string name="title_sec_ques2">Security Question 2</string>
    <string name="title_sec_ques3">Security Question 3</string>
    <string name="title_sec_ques4">Security Question 4</string>
    <string name="title_sec_ques5">Security Question 5</string>
    <string name="title_sec_ques6">Security Question 6</string>
    <string name="title_pref_sec_question">Question:</string>
    <string name="title_sec_answer1">Answer1</string>
    <string name="title_sec_answer2">Answer2</string>
    <string name="title_sec_answer3">Answer3</string>
    <string name="title_sec_answer4">Answer4</string>
    <string name="title_sec_answer5">Answer5</string>
    <string name="title_sec_answer6">Answer6</string>
    <string name="title_sec_ans">Answer:</string>
    <string name="summary_question_select">Please click here to select question</string>
    <string name="summary_answer_select">Please click here to provide answer</string>

    <!-- Example General settings -->
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_general">General</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_title_app">About Timebox</string>
    <string name="pref_summary_app">Timebox is an activity monitoring app which allows user to add activities on a daily basis and review them via textual and graphical displays.</string>
    <string name="pref_title_team">About CurryWurst</string>
    <string name="pref_summary_team">Four students from ISEE formed the team \'CurryWurst\' to develop this app for activity monitoring.\n\nTeam members:\nDean Dsouza\nJahnavi Cheyyanda\nMoritz Spiller\nPham Huu Quang</string>
    <string name="pref_title_lecture">About ISEE</string>
    <string name="pref_summary_lecture">Introduction to Software Engineering for Engineers(ISEE) is a course which deals with software development. As part of this course, our team developed an android app for tracking an users activities. The process involved obtaining the requirements, designing the system, implementation and system testing.\n</string>
    <string name="pref_summary_blog">All the information can be found in our team blog provided below.\n\n<a href="www.google.com">CurryWurst Blog!</a></string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Strings related to App layouts and classes -->
    <!-- Strings related to titles -->
    <string name="tab_review_calendar">Calendar</string>
    <string name="tab_review_graph">Graph</string>
    <string name="tab_review_text">Text</string>
    <string name="title_activity">Activity Name</string>
    <string name="title_add_category">Add Category</string>
    <string name="title_category">Category</string>
    <string name="title_category_color">Category Color</string>
    <string name="title_category_name">Category Name</string>
    <string name="title_category_select">Select the category from dropdown</string>
    <string name="title_end_date_time">End Date and Time</string>
    <string name="title_forgot_pin">Recover PIN</string>
    <string name="title_home">Home</string>
    <string name="title_recent_activities">Recent Activities</string>
    <string name="title_log_activity">Log Activity</string>
    <string name="title_modify_category">Modify Category</string>
    <string name="title_navigation">Menu</string>
    <string name="title_notes">Notes</string>
    <string name="title_review">Review</string>
    <string name="title_schedule_activity">Schedule Activity</string>
    <string name="title_sec_answer">Answer</string>
    <string name="title_sec_question">Please answer the below questions</string>
    <string name="title_settings">Settings</string>
    <string name="title_start_date_time">Start Date and Time</string>
    <string name="title_target_duration">Target Duration</string>
    <string name="title_checkScheduled_activities">Scheduled Activities</string>
    <string name="title_all_categories">All Categories</string>
    <string name="header_activity_name">Activity Name</string>
    <string name="header_activity_duration">Duration</string>
    <string name="title_confirm_pin">Confirm PIN</string>
    <string name="title_modify_pin">Modify PIN</string>
    <string name="title_display_activity">Activity Details</string>
    <string name="header_activity_duration_calendar">Duration</string>
    <string name="header_activity_name_calendar">Activity name</string>
    <string name="title_parent_category">Parent Category(Optional)</string>


    <!-- Strings related to hints -->
    <string name="hint_activity">Enter activity name</string>
    <string name="hint_category_color">#000000</string>
    <string name="hint_category_name">e.g. Sport</string>
    <string name="hint_end_date_time">Select end date time</string>
    <string name="hint_end_time">Select end time</string>
    <string name="hint_notes">Enter notes for this activity</string>
    <string name="hint_pin">Enter PIN</string>
    <string name="hint_sec_answer">Provide answer here</string>
    <string name="hint_start_date_time">Select start date time</string>
    <string name="hint_start_time">Select start time</string>
    <string name="hint_target_duration">Enter the target duration</string>
    <string name="hint_select_category">Select Category</string>
    <string name="hint_set_pin">Enter Pin (4 digits)</string>
    <string name="hint_confirm_pin">Enter Pin again</string>


    <!-- Strings related to button actions -->
    <string name="action_forgot_pin">Forgot PIN?</string>
    <string name="action_reset_answer">Reset</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_validate_answer">Validate</string>
    <string name="action_search">Search</string>
    <string name="action_clear">Clear</string>
    <string name="action_expand">Open Filter</string>
    <string name="action_collapse">Close Filter</string>
    <string name="action_edit">Edit</string>

    <!-- Strings related to toast messages -->
    <string name="message_incorrect_pin">Entered PIN is incorrect</string>

    <!-- Strings related to switches -->
    <string name="switch_modify">Modify</string>
    <string name="switch_schedule">Schedule</string>

    <!-- Strings related to spinners -->


    <!-- Miscellaneous -->
    <string name="sec_ques1">What is the name of your first pet?</string>
    <string name="sec_ques2">What is the maiden name of your mother?</string>
    <string name="sec_ques3">What is the your favourite sport?</string>

    <!-- Strings related to lists -->
    <string name="list_view_empty">No activity logged yet</string>

    <!-- Strings related to dialogs -->
    <string name="dialog_set_pin">Set PIN</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>

    <!-- Strings related to scheduled_activities_status -->
    <string name="title_logged_hours">Logged hours</string>
    <string name="title_check_scheduled_save">Save</string>
    <string name="desc_progressBar">Your progress:</string>

</resources>
