<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:summary=""
        android:persistent="true" />

    <PreferenceScreen
        android:title="@string/pref_title_app" >

        <Preference
            android:title="@string/app_name"
            android:icon="@drawable/app_logo"
            android:summary="@string/pref_summary_app" />

    </PreferenceScreen>

    <PreferenceScreen
        android:title="@string/pref_title_team" >

        <Preference
            android:title="@string/team_name"
            android:summary="@string/pref_summary_team"/>

    </PreferenceScreen>

    <PreferenceScreen
        android:title="@string/pref_title_lecture" >

        <Preference
            android:title="@string/lecture_name"
            android:summary="@string/pref_summary_lecture"/>

        <Preference
            android:summary="@string/pref_summary_blog"
            android:key="TeamBlog">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://dbse-teaching.github.io/isee2018-CurryWurst/"/>
        </Preference>

    </PreferenceScreen>

</PreferenceScreen>
