<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/title_display_activity_name"
            android:hint="@string/title_activity"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:id="@+id/text_display_activity_name"
            android:hint="@string/title_activity"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/title_display_category_name"
            android:hint="@string/title_category"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:id="@+id/text_display_category_name"
            android:hint="@string/hint_category_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/title_display_start_datetime"
            android:hint="@string/title_start_date_time"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:id="@+id/text_display_start_datetime"
            android:hint="@string/hint_start_date_time"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/title_display_end_datetime"
            android:hint="@string/title_end_date_time"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:id="@+id/text_display_end_datetime"
            android:hint="@string/hint_end_date_time"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/title_display_notes"
            android:hint="@string/title_notes"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:id="@+id/text_display_notes"
            android:hint="@string/hint_notes"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp" />


    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:id="@+id/button_edit_activity"
        android:text="@string/dialog_ok"/>


</LinearLayout>