<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.aktilog.timebox.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.aktilog.timebox.SettingsActivity$PinPreferenceFragment"
        android:icon="@drawable/ic_baseline_lock_24px"
        android:title="@string/pref_header_pin_settings" />

    <header
        android:fragment="com.aktilog.timebox.SettingsActivity$CategoriesPreferenceFragment"
        android:icon="@drawable/ic_baseline_view_headline_24px"
        android:title="@string/pref_header_categories">
    </header>
</preference-headers>
