<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="100dp"
    android:background="@color/colorWhite">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/text_set_pin"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="18dp"
        android:inputType="numberPassword"
        android:hint="@string/hint_set_pin"
        android:maxLength="4"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:id="@+id/button_set_pin_cancel"
            android:text="@string/dialog_cancel" />

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:id="@+id/button_set_pin_ok"
            android:text="@string/dialog_ok"/>


    </LinearLayout>



</LinearLayout>