<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="320dp"
    android:orientation="vertical"
    tools:context=".ScheduledActivitiesStatus">

    <TableLayout
        android:layout_width="300dp"
        android:layout_height="180dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/desc_activity_name"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:text="@string/header_activity_name" />

            <TextView
                android:id="@+id/display_activity_name"
                android:layout_width="150dp"
                android:layout_height="25dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/desc_start_date_time"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:text="@string/title_start_date_time" />

            <TextView
                android:id="@+id/display_start_date_time"
                android:layout_width="150dp"
                android:layout_height="25dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/desc_end_date_time"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:text="@string/title_end_date_time" />

            <TextView
                android:id="@+id/display_end_date_time"
                android:layout_width="150dp"
                android:layout_height="25dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/desc_target_duration"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:text="@string/title_target_duration" />

            <TextView
                android:id="@+id/display_target_duration"
                android:layout_width="150dp"
                android:layout_height="25dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/desc_logged_hours"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:text="@string/title_logged_hours" />

            <TextView
                android:id="@+id/display_logged_hours"
                android:layout_width="150dp"
                android:layout_height="25dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <Button
                android:id="@+id/decrease_hours"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="-" />

            <Button
                android:id="@+id/increase_hours"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="+" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/desc_progressBar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/desc_progressBar" />

    <ProgressBar
        android:id="@+id/progressBar_work_done"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:progressTint="@color/colorRedDark"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/check_scheduled_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_check_scheduled_save" />

</LinearLayout>
